config+docs: make ports/base-url/cookie names fully configurable; document
- Admin app now reads app.base-url from ADMIN_BASE_URL (default :8080), used as
  the allowed WebSocket origin — previously fell back to wildcard. Both apps'
  ports (ADMIN_PORT/USER_PORT) and base URLs are env-configurable for any port.
- AuthService javadoc updated to reflect configurable per-app cookie name.
- .env.example: drop stale Node-era PORT=3000; document ADMIN_PORT/USER_PORT,
  ADMIN_BASE_URL/BASE_URL, SESSION_COOKIE_NAME, STATIC_DIR with the host-vs-port
  cookie-scoping rationale.
- README: add 'Custom ports' section + env var table + independent-session note.
- docs/DEPLOYMENT.md: fix stale APP_BASE_URL -> ADMIN_BASE_URL/BASE_URL, add
  SESSION_COOKIE_NAME + STATIC_DIR rows, expand 'Changing the Ports'.
- docs/ARCHITECTURE.md: note session cookie name is per-app configurable.